# ros2_object_detection

./: README.md  pyproject.toml
ros2_detr_components/: package.xml  pyproject.toml  setup.cfg  setup.py
ros2_detr_components/ros2_detr/: detr.py  grounded_sam.py
ros2_detr_msgs/: CMakeLists.txt  package.xml
ros2_object_detection_components/: package.xml  pyproject.toml  setup.py
ros2_object_detection_components/ros2_object_detection_components/: detr.py  grounded_dino.py  grounded_sam.py
ros2_object_detection_msgs/: CMakeLists.txt  package.xml
ros2_object_detection_msgs/msg/: BoundingBox.msg  Mask.msg
ros2_object_detection_msgs/msgs/: BoundingBox.msg
ros2_object_detection_msgs/srv/: DetectObjectDETR.srv  DetectObjectGroundedDino.srv  DetectObjectSam.srv
